# H62SEP

calc/: CMakeLists.txt  calc.cpp
hello/: README.md  hello.cpp  message.h
hiqt/: CMakeLists.txt  mainwindow.ui
maths/: CMakeLists.txt  config.h  maths.cpp  maths.h
qt/ex1/: CMakeLists.txt
qt/ex2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
qt/ex3/: CMakeLists.txt  mainwindow.cpp
qt/ex4/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
qt/ex5/: CMakeLists.txt  mainwindow.cpp  task.cpp
vtk/cone1/: CMakeLists.txt
vtk/cone2/: Cone.cxx
